labs/lab_8/protocol.txt
artdub@mint ~/c++/test $ cat m.c
#include <stdio.h> 

int main() 
{ 
	int a,b,result; 
	scanf("%d%d",&a,&b);
	result=a/b; 
	printf("%d\n",result); 
	return 0; 
}artdub@mint ~/c++/test $ gcc -std=c99 -Wall -pedantic m.c && ./a.out
42 0
Исключение в операции с плавающей точкой


artdub@mint ~/c++/test $ cat m.c
#include <stdio.h> 
#include <locale.h>

int main() 
{ 
	setlocale(LC_ALL,"Russian");
	int a,b,result; 
	scanf("%d%d",&a,&b)
	if(b!=0)
	{
		result=a/b; 
		printf("%d\n",result); 
	}
	else 
	{
		printf("Деление на нуль невозможно, введите b > 0\n");
	}
	return 0; 
}artdub@mint ~/c++/test $ gcc -std=c99 -Wall -pedantic m.c && ./a.out
m.c: In function ‘main’:
m.c:9:2: error: expected ‘;’ before ‘if’
  if(b!=0)
  ^
m.c:7:10: warning: unused variable ‘result’ [-Wunused-variable]
  int a,b,result; 
          ^

artdub@mint ~/c++/test $ cat m.c
#include <stdio.h> 
#include <locale.h>

int main() 
{ 
	setlocale(LC_ALL,"Russian");
	int a,b,result; 
	scanf("%d%d",&a,&b);
	if(b!=0)
	{
		result=a/b; 
		printf("%d\n",result); 
	}
	else 
	{
		printf("Деление на нуль невозможно, введите b > 0\n");
	}
	return 0; 
}artdub@mint ~/c++/test $ gcc -std=c99 -Wall -pedantic m.c && ./a.out
42 0
Деление на нуль невозможно, введите b > 0
